5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1716_2499.log
== TEST (2019-05-13 17:14:32) 
-- CODE:
from math import*
x=int(input("digite um numero: "))
soma=1
i=0
while(i<x):
	soma=soma+1/factorial(x)
	i=i+1
print(round(soma,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:14:58) 
-- CODE:
from math import*
x=int(input("digite um numero: "))
soma=1
i=0
while(i<x):
	soma=soma+1/factorial(x)
	i=i+1
print(round(soma,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:15:30) 
-- CODE:
from math import*
x=int(input("digite um numero: "))
soma=0
i=0
while(i<x):
	soma=soma+1/factorial(x)
	i=i+1
print(round(soma,8))
-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:15:38) 
-- CODE:
from math import*
x=int(input("digite um numero: "))
soma=0
i=0
while(i<x):
	soma=soma+1/factorial(x)
	i=i+1
print(round(soma,8))
-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:15:53) 
-- CODE:
from math import*
x=int(input("digite um numero: "))
soma=0
i=0
while(i<x):
	soma=soma+1/factorial(x)
	i=i+1
print(round(soma,8))
-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:16:44) 
-- CODE:
from math import*
x=int(input("digite um numero: "))
soma=0
i=0
while(i<x):
	soma=(soma+1)/factorial(x)
	i=i+1
print(round(soma,8))
-- OUTPUT:
0.00019845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:17:05) 
-- CODE:
from math import*
x=int(input("digite um numero: "))
soma=0
i=0
while(i<x):
	soma=soma+(1/factorial(x))
	i=i+1
print(round(soma,8))
-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:17:10) 
-- CODE:
from math import*
x=int(input("digite um numero: "))
soma=0
i=0
while(i<x):
	soma=soma+(1/factorial(x))
	i=i+1
print(round(soma,8))
-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:18:38) 
-- CODE:
from math import*
x=int(input("digite um numero: "))

i=0
while(i<x):
	e=1
	soma=e+(1/factorial(x))
	i=i+1
print(round(soma,8))
-- OUTPUT:
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:19:18) 
-- CODE:
from math import*
x=int(input("digite um numero: "))

i=1
while(i<x):
	e=1
	soma=e+(1/factorial(x))
	i=i+1
print(round(soma,8))
-- OUTPUT:
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:24:53) 
-- CODE:
from math import*
x=int(input("digite um numero: "))
e=1
i=0
while(i<x):
	if(x==1):
		e=e
	elif(x>1)
		e=e+(1/factorial(x))
	i=i+1
print(round(e,8))
-- ERROR:
File "XXXX", line 8
    elif(x>1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:24:54) 
-- CODE:
from math import*
x=int(input("digite um numero: "))
e=1
i=0
while(i<x):
	if(x==1):
		e=e
	elif(x>1)
		e=e+(1/factorial(x))
	i=i+1
print(round(e,8))
-- ERROR:
File "XXXX", line 8
    elif(x>1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:25:10) 
-- CODE:
from math import*
x=int(input("digite um numero: "))
e=1
i=0
while(i<x):
	if(x==1):
		e=e
	elif(x>1):
		e=e+(1/factorial(x))
	i=i+1
print(round(e,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:25:16) 
-- CODE:
from math import*
x=int(input("digite um numero: "))
e=1
i=0
while(i<x):
	if(x==1):
		e=e
	elif(x>1):
		e=e+(1/factorial(x))
	i=i+1
print(round(e,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:25:22) 
-- CODE:
from math import*
x=int(input("digite um numero: "))
e=1
i=0
while(i<x):
	if(x==1):
		e=e
	elif(x>1):
		e=e+(1/factorial(x))
	i=i+1
print(round(e,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:27:02) 
-- CODE:
from math import*
x=int(input("digite um numero: "))
e=1
i=0
while(i<x):
	if(x==1):
		e=e
	elif(x>1):
		e=e+(1/factorial(x-1))
	i=i+1
print(round(e,8))
-- OUTPUT:
1.00972222
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 17:27:14) 
-- CODE:
from math import*
x=int(input("digite um numero: "))
e=1
i=0
while(i<x):
	if(x==1):
		e=e
	elif(x>1):
		e=e+(1/factorial(x-1))
	i=i+1
print(round(e,8))
-- EXECUTION TIME:
0.188225
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1.00972222
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1.0
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
1.05
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:27:43) 
-- CODE:
from math import*
x=int(input("digite um numero: "))
e=1
i=0
while(i<x):
	if(x==1):
		e=e
	elif(x>1):
		e=e+(1/factorial(x-1))
	i=i+1
print(round(e,8))
-- OUTPUT:
1.00972222
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:27:59) 
-- CODE:
from math import*
x=int(input("digite um numero: "))
e=1
i=0
while(i<x):
	if(x==1):
		e=e
	elif(x>1):
		e=e+(1/factorial(x-1))
	i=i+1
print(round(e,8))
-- OUTPUT:
1.00972222
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:28:08) 
-- CODE:
from math import*
x=int(input("digite um numero: "))
e=1
i=0
while(i<x):
	if(x==1):
		e=e
	elif(x>1):
		e=e+(1/factorial(x-1))
	i=i+1
print(round(e,8))
-- OUTPUT:
1.00972222
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:28:53) 
-- CODE:
from math import*
x=int(input("digite um numero: "))
e=1
i=1
while(i<x):
	if(x==1):
		e=e
	elif(x>1):
		e=e+(1/factorial(x-1))
	i=i+1
print(round(e,8))
-- OUTPUT:
1.00833333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:32:34) 
-- CODE:
from math import*
x=int(input("digite um numero: "))
e=1
i=1
while(i<x):
	#if(x==1):
		#e=e
	#elif(x>1):
	e=e+(1/factorial(x))
	i=i+1
print(round(e,8))
-- OUTPUT:
1.00119048
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:32:41) 
-- CODE:
from math import*
x=int(input("digite um numero: "))
e=1
i=1
while(i<x):
	#if(x==1):
		#e=e
	#elif(x>1):
	e=e+(1/factorial(x))
	i=i+1
print(round(e,8))
-- OUTPUT:
1.00119048
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 17:35:39) 
-- CODE:
from math import*
x=int(input("digite um numero: "))
e=1
i=1
while(i<x):
	#if(x==1):
		#e=e
	#elif(x>1):
	e=e+(1/factorial(i))
	i=i+1
print(round(e,8))
-- EXECUTION TIME:
0.152425
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 17:37:30) 
-- CODE:
from math import*
x=int(input("digite um numero: "))
e=1
i=1
while(i<x):
	e=e+(1/factorial(i))
	i=i+1
print(round(e,8))
-- EXECUTION TIME:
0.148256
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:17:57) 
-- CODE:
from math import*
x = int(input( "digite um numero k:  "))
e = 1
i = 1
while(i < x):
	e = e + (1/factorial(i))
	i = i+1
print(round(e,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:18:15) 
-- CODE:
from math import*
x = int(input( "digite um numero k:  "))
e = 1
i = 1
while(i < x):
	e = e + (1/factorial(i))
	i = i+1
print(round(e,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:18:27) 
-- CODE:
from math import*
x = int(input( "digite um numero k:  "))
e = 1
i = 1
while(i < x):
	e = e + (1/factorial(i))
	i = i+1
print(round(e,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:18:31) 
-- CODE:
from math import*
x = int(input( "digite um numero k:  "))
e = 1
i = 1
while(i < x):
	e = e + (1/factorial(i))
	i = i+1
print(round(e,8))
-- EXECUTION TIME:
0.194706
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:19:17) 
-- CODE:
from math import*
x = int(input( "digite um numero k:  "))
e = 1
i = 1
while(i < x):
	e = e + (1/factorial(i))
	i = i+1
print(round(e,8))
-- EXECUTION TIME:
0.209996
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
